# NeXUI-Data

./: .gitignore  README.md  nexui  package-lock.json  package.json  pyproject.toml
demos/: README.md
docs/: baselines-gemini.md  baselines-openai.md  capture-playwright.md  dataset-authoring.md  explanations-design.md  explanations-judge-design.md  recorder.md  repo-asset-policy.md
docs/specs/: nexui-core-v0.0.md
downloads/: README.md
examples/recipes/: account-settings-local.json
logs/: README.md
schemas/nexui/: action.schema.json  explanation-judge-packet.schema.json  explanation-judge-verdict.schema.json  explanation-justification.schema.json  explanation-rubric.schema.json  observation.schema.json  recording-recipe.schema.json  score.schema.json  source-manifest.schema.json  source-registry.schema.json  split-manifest.schema.json  task.schema.json  trace.schema.json
scripts/: audit_repo_assets.py  backfill_task_metadata.py  check_orangehrm_readiness.sh  check_webarena_map_readiness.sh  patch_webarena_map_assets.sh  reseed_erpnext.sh  reseed_orangehrm.sh  reseed_pretix.sh  run_flash_baselines.py  run_openai_reasoning_baselines.py  seed_erpnext_fixtures.py  setup_webarena_map_data.sh  start_orangehrm.sh
sources/: registry.json
sources/accessible-university/: README.md  bootstrap.md  notes.md  reset-notes.md  seed-notes.md  site.yaml  task-ideas.md
sources/demoblaze/: notes.md  (+6 more)
splits/: challenge.json  dev.json  test.json  validation.json
tests/: test_flash_baseline_runner.py
tools/: capture-snapshot.mjs  capture-snapshot.test.mjs  record-task.mjs
(+8568 files in other folders)
