[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexui"
version = "0.0.0"
description = "Accessibility-first benchmark infrastructure for assistive UI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "NExUI Contributors" }
]
dependencies = [
  "imageio>=2.37.0,<3",
  "imageio-ffmpeg>=0.6.0,<1",
  "numpy>=2.2.6,<3",
  "Pillow>=11.2.0,<12",
]

[project.scripts]
nexui = "nexui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
